# skeleton

./: .gitignore  README.md  default.nix
nix/: s32sdk.nix
rp2040/: CMakeLists.txt  default.nix
s32k148/: CMakeLists.txt  default.nix  main.c
